class.newInstance() is deprecated, replace with recommended class.getConstructor().newInstance() instead