@@ -487,7 +487,7 @@ public class Configurator implements ICompilerSettings, IConfigurator, ICompiler
     {
         try
         {
-            return configurationClass.newInstance();
+            return configurationClass.getConstructor().newInstance();
         }
         catch (Exception e)
         {
@@ -499,7 +499,7 @@ public class Configurator implements ICompilerSettings, IConfigurator, ICompiler
             // problems.
             try
             {
-                return Configuration.class.newInstance();                
+                return Configuration.class.getConstructor().newInstance();                
             }
             catch (Exception e2)
             {
